our donor section added

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.text-red{
+    color: rgb(216, 18, 18);
+}
+
+.bg-red{
+    background-color: rgb(216, 18, 18);
+}
