select btn added

--- a/src/Components/GlobalElement/Card/Card.css
+++ b/src/Components/GlobalElement/Card/Card.css
@@ -1,15 +1,17 @@
 
-.btn-primary{
-    background-color: rgb(203, 15, 15);
+.primary-btn{
+    background-color: #ed193b;
     
     padding: 5px 8px;
     color: rgb(253, 250, 250);
     border-radius: 6px;
+
     
 }
 
-.btn-primary:hover{
-    background-color: rgb(255, 69, 69);
+.primary-btn:hover{
+    background-color: #de0d30;
+/* transition: all 0.4s; */
 }
 .card{
 
