recuirment section complete

--- a/src/Page/Home/BasicRecuirments/BasicRecuirments.css
+++ b/src/Page/Home/BasicRecuirments/BasicRecuirments.css
@@ -1,6 +1,7 @@
 .basic-recuirment{
-    color: #ffffffde;
-    background: linear-gradient(to right, #ed193b 50%, #e6e65b );
+    color: #f7eacefa;
+    /* color: #3b023a; */
+    background: linear-gradient(to right, #ed193b 50%, #ffcd07 );
     /* opacity: 90%; */
     /* -webkit-background-clip: text; */
     /* -webkit-text-fill-color: transparent; */
