--- a/src/Page/AllDonors/AllDonors.css
+++ b/src/Page/AllDonors/AllDonors.css
@@ -8,12 +8,11 @@
 /* Apply styles to the select element */
 .selector {
     margin-left: 3%;
-   
     border: 1px solid #dd062a;
     color: #ed193b;
     border-radius: 4px;
     font-size: 16px;
-    /* background-color: #ed193b; */
+    /* background-color: #ed193b;  */
     cursor: pointer;
   }
   
@@ -21,6 +20,7 @@
   .selector option {
     font-size: 16px;
     color: #333;
+ 
 }
 
   
@@ -63,5 +63,10 @@
     font-size: 14px;
     padding: 5px;
     text-align: center;
+    
+  }
+  .selector option{
+   padding: 30px;
+    
   }
 
