blood group type section almost complete

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+:root{
+    --red-color : #ed193b;
+}
 .text-red{
     color: #ed193b;
 }
